--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </section>
 
     <section id="hero">
-      <h1>Your Personal Assitant</h1>
+      <h1>Your Personal Assistant</h1>
       <p>Get hope with your daily life stuff.</p>
       <a href="#">Get help already</a>
     </section>
