adding info button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
   <div id="bg"></div>
 
   <header>
-    <a href="#">ZoomZoom</a>
+    <a class="logo" href="#">ZoomZoom</a>
+    <div class="container">
+      <div class="inner">
+        <span>i</span>
+        <h1>Tech used</h1>
+        <p>This project was made by HTML, CSS and SASS</p>
+      </div>
+    </div>
   </header>
 
   <main>
