--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="inner">
         <span>i</span>
         <h1>Tech used</h1>
-        <p>This project was made by HTML, CSS and SASS</p>
+        <p>This project was made by HTML and SASS</p>
       </div>
     </div>
   </header>
